# nuparu

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  flake.nix  mise.toml  nuparu.ai  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  vite.config.ts
.changeset/: README.md  config.json
.github/workflows/: check.yml  release.yml  renovate.yml  run.yml
.helix/: languages.toml
crates/nuparu-cli/: Cargo.toml
crates/nuparu-core/: Cargo.toml
crates/nuparu-wasm/: Cargo.toml
docs/: README.md  TODO.md  dprint-plugin-dev.html  nushell-book-introduction.html  nushell-parser-evaluation.md  nushell-pipelines.html  rejoining-strategy.md  release-packaging-architecture.md
scripts/: nuparu-distribution.node.ts  nuparu-distribution.ts  package-vscode.ts  publish-dprint.sh  release.mjs  renovate-wasm-bindgen-postupgrade.node.ts  sync-versions.mjs  version-crates.node.ts  version-crates.ts
src/: configuration.rs  formatter.rs  lib.rs  main.rs  nushell.rs
tasks/closed/: 0001-prevent-statement-boundary-collapse.xml  0002-preserve-multistatement-closures.xml  0003-distinguish-record-literals-from-block-openers.xml  0004-preserve-readable-multiline-lists.xml  0005-prevent-inline-block-body-compaction.xml  0006-preserve-file-mode-when-rewriting.xml  0007-decide-grouped-multiline-expression-style.xml  0008-decide-simple-catch-compaction-style.xml  0009-decide-command-head-compaction-boundaries.xml
tasks/review/: 0001-0004.md  (+16 more)
vscode/: README.md  extension.js  package.json  pnpm-lock.yaml  tsconfig.json
(+55 files in other folders)
