[package]
name = "nufmt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dprint-core = { version = "0.67.4", features = ["process"] }
nu-parser = "=0.112.1"
nu-protocol = { version = "=0.112.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio = { version = "1.48.0", features = ["rt", "time"] }
